--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.17.0",
+    "connect-multiparty": "^2.2.0",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "request": "^2.88.0"
